package com.aibert.dosw.domain.model.user;

public enum ActionEvent {
    TASK_COMPLETED_ON_TIME,
    TASK_COMPLETED_LATE,
    STREAK_MAINTAINED,
    WEEKLY_GOAL_MET
}
