package com.aibert.dosw.domain.model.user;

public enum Badge {
    PRIMERA_TAREA,
    RACHA_7_DIAS,
    RACHA_30_DIAS,
    META_SEMANAL,
    MAESTRO_PUNTUALIDAD
}
