package com.aibert.dosw.domain.model.user;

public enum Level {
    NOVATO,
    CONSTANTE,
    COMPROMETIDO,
    AVANZADO,
    MAESTRO_DEL_TIEMPO
}
